# django-unload

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
demo/app/templates/app/tags/: tag_template.html
demo/app/templates/app/templates/: app_template.html  double_loads.html  double_member_load.html  from_syntax_with_tags.html  from_syntax_without_tags.html  only_filter.html  with_tags.html  without_tags.html
demo/app/templatetags/: app_tags.py
demo/demo/: settings.py  urls.py
demo/requirements/: requirements-1.8.txt
demo/templates/: master.html
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  user_guide.rst
tests/: test_base.py  test_commands.py  test_logic.py  test_utils.py
unload/: base.py  compat.py  logic.py  search.py  settings.py  utils.py
unload/management/commands/: find_unnecessary_loads.py  find_unused_tags.py
unload/tests/: test_base.py  test_logic.py  test_utils.py
