[flake8]
# Reference: https://flake8.readthedocs.io/en/latest/user/configuration.html
ignore = D203
exclude =
    .git,
    __pycache__,
    docs/conf.py,
    build,
    dist
max-complexity = 10

[aliases]
test = pytest

[tool:pytest]
addopts =
    --cov-config .coveragerc
	--cov-report term
	--ds=demo.demo.settings
	-s
testpaths = tests
django_find_project = false
python_files = tests/test_*.py

[metadata]
license-file = LICENSE

[wheel]
universal = 1
